tests/diag/provider-over-local.id
operator <+> precedence: 50 assoc: left capture: infix -> sub
activate tests/pkg/exporter
3 <+> 4
